appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "subflows/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}

onFlowComplete:
  - runScript:
      file: "subflows/teardown.js"
---
- runFlow: "subflows/school_admin_login_flow.yaml"
- assertVisible:
    id: "app_title"
    text: "Apps"
- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- tapOn:
    id: "floating_action_button"   #  +Class button
- assertVisible:
    id: "app_title"
    text: "Add class"
- tapOn: "Class name"
- inputText: "New Class"
- tapOn: "Description"
- inputText: "New Course Description"
- tapOn: "Save"
- assertVisible:
    id: "app_title"
    text: "New Class"
- tapOn: "Add Student"
- tapOn: ".*Copy invite code.*"

- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}

- tapOn: "Get Started"

- runFlow:
    file: "subflows/get_started_select_school_by_name.yaml"
    env:
      SCHOOL_NAME: ${SCHOOL_NAME}
- tapOn: "I have an invite code"
- tapOn: "Invite code"
- longPressOn: "Invite code"
- tapOn: "Paste"
- tapOn: "Next"
- assertVisible:
    id: "app_title"
- tapOn: "I’m a Student"
- assertVisible:
    id: "app_title"
    text: "Your profile"

# validating mandatory fields
- tapOn: "Next"
- assertVisible: "Required*" # Name is mandatory field
- tapOn: "Your name*"
- inputText: "Child User"
- tapOn: "Your gender*"
- tapOn: "Female"
- tapOn: "Your date of birth*"
- longPressOn: ".*1900.*"
- tapOn: "Select all"
- eraseText
- runScript:
    file: "subflows/setDate.js"
- inputText: ${output.pastYearDateC}
- tapOn: "Next"

- assertVisible:
    id: "app_title"
    text: "Create account"
- assertVisible: "childuser"  #username
- tapOn: "Next"
- assertVisible: "Password"
- tapOn: "Sign-up"
- assertVisible: "Required field" # Password is a mandatory field
- tapOn: "Password"
- inputText: "testc1"
- tapOn: "Sign-up"
- assertVisible:
    id: "app_title"
    text: "Waiting for approval"
- assertVisible: "Please wait"

- runFlow: "subflows/school_admin_login_flow.yaml"
- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- tapOn: "New Class"
- assertVisible: "Pending requests"
- assertVisible: "Child User"
- tapOn: "Accept Invite"

- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}

- tapOn: "Get Started"

- runFlow:
    file: "subflows/get_started_select_school_by_name.yaml"
    env:
      SCHOOL_NAME: ${SCHOOL_NAME}

- tapOn:
    id: "username"
- inputText: "childuser"
- tapOn:
    id : "password"
- inputText: "testc1"
- tapOn: "Login"
- assertVisible: "Apps"
- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- assertVisible: "New Class"
- tapOn: "New Class"
#- assertVisible: "Child User"